<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mrk.banner.base.Banner
        android:id="@+id/xdja_banner"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <ImageView
        android:id="@+id/xdja_myphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/xdja_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_myphoto"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/xdja_account"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/xdja_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/xdja_password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/xdja_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/xdja_login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/xdja_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_login"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/xdja_forget_password"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/xdja_user_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/xdja_login"
        android:layout_below="@id/xdja_login"
        android:layout_marginTop="5dp"
        android:text="@string/xdja_user_register"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/xdja_barcode_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/holo_green_light"
        android:padding="5dp"
        android:text="@string/xdja_barcode_scan"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/xdja_barcode_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/holo_green_light"
        android:padding="5dp"
        android:text="@string/xdja_barcode_gallery"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>
