<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/xdja_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_myphoto"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/xdja_account"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/xdja_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/xdja_password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/xdja_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xdja_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/xdja_user_start_register"
        android:textColor="#ffffff"
        android:textSize="30sp" />
</RelativeLayout>
